OCVN-13 Implemented language switcher

--- a/ui/components/app/style.less
+++ b/ui/components/app/style.less
@@ -50,6 +50,10 @@ aside {
   section.description strong{
     color: @red;
   }
+
+  section.language-switcher img{
+    cursor: pointer;
+  }
 }
 
 .years-bar {
