OCVN-266 Changes from OCE

--- a/ui/oce/style.less
+++ b/ui/oce/style.less
@@ -2,10 +2,11 @@
   font-family: "Open Sans", Arial, sans-serif;
 }
 
-.camera-icon{
+.chart-export-icon{
   fill: #333;
   float: right;
   cursor: pointer;
+  margin-right: 5px;
 }
 
 .chart-container .modebar{
