--- a/ui/oce/style.less
+++ b/ui/oce/style.less
@@ -29,3 +29,29 @@
 .field.type-ahead{
   margin-bottom: 10px;
 }
+
+.options.range{
+  margin-top: 3rem;
+  width: 350px;
+  margin-left:auto;
+  margin-right:auto;
+  .InputRange{
+    margin-bottom: 4rem;
+  }
+
+  .InputRange-label{
+    font-size: 2rem;
+  }
+
+  .InputRange-sliderContainer:last-child .InputRange-label--value{
+    top: 1rem;
+  }
+
+  .InputRange-label--value{
+    top: -3.6rem;
+  }
+
+  .InputRange-label--min, .InputRange-label--max{
+    display: none;
+  }
+}
