--- a/ui/oce/visualizations/map/style.less
+++ b/ui/oce/visualizations/map/style.less
@@ -1,3 +1,24 @@
 .leaflet-popup-content{
   width: 500px!important;
 }
+
+.tender-locations-popup{
+  header{
+    background: #ca3d3f;
+    margin-top: -14px;
+    margin-left: -20px;
+    margin-right: -20px;
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
+    padding: 15px;
+    color: white;
+    font-size: 2em;
+    font-weight: bolder;
+  }
+
+  a.leaflet-popup-close-button{
+    top: 1em;
+    right: 20px;
+    padding-top: 7px;
+  }
+}
