--- a/ui/oce/visualizations/map/style.less
+++ b/ui/oce/visualizations/map/style.less
@@ -18,7 +18,29 @@
 
   a.leaflet-popup-close-button{
     top: 1em;
-    right: 20px;
+    right: 15px;
     padding-top: 7px;
+  }
+
+  section.tabs-bar{
+    background: #272727;
+    font-size: 1.2em;
+    margin-left: -20px;
+    margin-right: -20px;
+    div{
+      padding: 10px;
+      padding-bottom: 7px;
+      border-bottom: 3px solid transparent;
+      &.active{
+        border-bottom-color: #ca3d3f;
+        a{
+          color: #d4d4d4;
+        }
+      }
+    }
+    a{
+      color: #848c98;
+      text-decoration: none;
+    }
   }
 }
