OCVN-264 Styling overview chart tab legend

--- a/ui/oce/visualizations/map/style.less
+++ b/ui/oce/visualizations/map/style.less
@@ -43,4 +43,14 @@
       text-decoration: none;
     }
   }
+
+  .map-chart.overview{
+    .legendsymbols{
+      display: none;
+    }
+
+    .legendtext{
+      text-transform: uppercase;
+    }
+  }
 }
