OCE-126 Styles for dashboard hints

--- a/ui/style.less
+++ b/ui/style.less
@@ -379,3 +379,8 @@ aside [role=navigation] a{
   width: 100px;
   display: inline-block;
 }
+
+.dashboard-hint{
+  text-transform: none;
+  margin-top: 10px;
+}
