--- a/ui/style.less
+++ b/ui/style.less
@@ -115,15 +115,18 @@ aside {
   }
 }
 
-.years-bar {
+@yearsBarBottom: 34px;
+@yearsBarHeight: 30px;
+
+.years-bar, .months-bar {
   position: fixed;
-  bottom: 34px;
+  bottom: @yearsBarBottom;
   border-bottom: 2px solid #c5c5c5;
   z-index: 1;
   padding-left: 0;
   padding-right: 0;
   display: table;
-  height: 30px;
+  height: @yearsBarHeight;
   a {
     display: table-cell;
     background-color: #e6e6e6;
@@ -148,6 +151,10 @@ aside {
       }
     }
   }
+}
+
+.months-bar{
+  bottom: @yearsBarBottom + @yearsBarHeight + 1;
 }
 
 footer.main-footer{
