--- a/ui/oce/style.less
+++ b/ui/oce/style.less
@@ -55,3 +55,14 @@
     display: none;
   }
 }
+
+.range-inputs{
+  margin-bottom: 10px;
+  width: 375px;
+  margin-left: auto;
+  margin-right: auto;
+  input{
+    width: 150px;
+    display: inline-block;
+  }
+}
