--- a/ui/style.less
+++ b/ui/style.less
@@ -69,6 +69,9 @@ header.branding{
 
   .header-icons{
     cursor: pointer;
+    &.user-tools{
+      cursor: default;
+    }
     display: flex;
     align-items: center;
     justify-content: center;
