OCE-187 Filters bar and dashboard switcher for default dashboard
(cherry picked from commit 491e6ef)

--- a/ui/oce/style.less
+++ b/ui/oce/style.less
@@ -66,3 +66,21 @@
     display: inline-block;
   }
 }
+
+.dashboard-default .dash-switcher-wrapper{
+    cursor: pointer;
+    .glyphicon{
+        font-size: .33em;
+        margin-left: 20px;
+        top: -5px;
+    }
+    .dashboard-switcher{
+        background: #cc3c3b;
+        font-weight: 500;
+        padding: 5px;
+        border-top: 1px dotted white;
+        a{
+            color: white;
+        }
+    }
+}
