OCVN-400 Style updates

--- a/ui/ocvn/style.less
+++ b/ui/ocvn/style.less
@@ -23,6 +23,10 @@ header.branding{
   height: 64px;
   z-index: 1002;
 
+  .logo-container{
+    padding-left: 40px;
+  }
+
   h1, small{
     color: white;
   }
@@ -41,12 +45,8 @@ header.branding{
     color: white;
     display: inline-block;
     float: right;
-    padding-left: 15%;
     text-transform: uppercase;
     width: 100%;
-    @media only screen and (max-width: 1280px) {
-      margin-left: -140px;
-    }
     &>div{
       cursor: pointer;
       padding: 20px;
@@ -88,6 +88,17 @@ header.branding{
         -moz-box-shadow: 0px 1px 10px 1px #db5151;
         -o-box-shadow: 0px 1px 10px 1px #db5151;
       }
+    }
+  }
+
+  @media (max-width: 1230px){
+    .logo-container{
+      padding-right: 0;
+    }
+
+    .menu>div{
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 }
